--- a/src/main/resources/org/example/DownloadManager.fxml
+++ b/src/main/resources/org/example/DownloadManager.fxml
@@ -18,7 +18,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="538.0" prefWidth="686.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.DownloadManager">
    <children>
       <BorderPane layoutY="1.0" prefHeight="538.0" prefWidth="686.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
@@ -70,6 +69,7 @@
                   <TableColumn prefWidth="75.0" text="File Name" />
                   <TableColumn prefWidth="75.0" text="File URL" />
                   <TableColumn prefWidth="75.0" text="Status" />
+                  <TableColumn prefWidth="75.0" text="Progress" />
                   <TableColumn prefWidth="75.0" text="Action" />
               </columns>
                <columnResizePolicy>
